Bug 338625 - Regression from 4.13: Quick filter does not really work any more (see description for details)
Summary: Regression from 4.13: Quick filter does not really work any more (see descrip...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.14.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 338749 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-28 13:30 UTC by Gunter Ohrner
Modified: 2014-09-02 11:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2014-08-28 13:30:05 UTC
Bug 1: kMail does not search for short strings (eg. 2-letter search strings) at all

Bug 2: If I enter a longer search string, the message list gets filtered. If I now delete the search string using backspace or Ctrl-A followed by "delete", the message list remains filtered. You have to enter some search text and click the "X"-arrow at the right of the input field to remove the list's filter.
Comment 1 Laurent Montel 2014-08-28 13:50:20 UTC
"Bug 1: kMail does not search for short strings (eg. 2-letter search strings) at all " it's not a bug. We don't want to search with size <3

"Bug 2:" I will investigate it.
Comment 2 Laurent Montel 2014-08-28 13:53:31 UTC
Git commit 4b67a411567e01051ced0ac27a6ed7128fb79462 by Montel Laurent.
Committed on 28/08/2014 at 13:53.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 338625 - Regression from 4.13: Quick filter does not really work any more (see description for details)

FIXED-IN: 4.14.1

M  +1    -1    messagelist/core/quicksearchline.cpp

http://commits.kde.org/kdepim/4b67a411567e01051ced0ac27a6ed7128fb79462
Comment 3 Gunter Ohrner 2014-08-28 14:56:10 UTC
(In reply to Laurent Montel from comment #1)
> "Bug 1: kMail does not search for short strings (eg. 2-letter search
> strings) at all " it's not a bug. We don't want to search with size <3

However, this used to work in kMail 4.13.x and older, if I'm not mistaken...
Comment 4 Laurent Montel 2014-08-28 15:40:38 UTC
(In reply to Gunter Ohrner from comment #3)
> (In reply to Laurent Montel from comment #1)
> > "Bug 1: kMail does not search for short strings (eg. 2-letter search
> > strings) at all " it's not a bug. We don't want to search with size <3
> 
> However, this used to work in kMail 4.13.x and older, if I'm not mistaken...

Yes we didn't add this limit before indeed.
But it will not fix
Comment 5 Christoph Feck 2014-09-02 11:18:19 UTC
*** Bug 338749 has been marked as a duplicate of this bug. ***