Fix Bug 338625 - Regression from 4.13: Quick filter does not really work any more (see description for details)

FIXED-IN: 4.14.1
BUG: 338625